# technion_236360_2021_spring

./: .gitignore  LICENSE  README.md
hw5/: CMakeLists.txt  bp.cpp  bp.hpp  code_gen.cpp  code_gen.h  compiler.cpp  compiler.h  hw3_output.cpp  hw3_output.hpp  main.cpp  makefile  more_run.sh  parse_utils.h  parser.ypp  print_functions.llvm  run_error_test.sh  run_test.sh  scanner.h  selfcheck-hw5  semantics.cpp  semantics.h  symbol_table.cpp  symbol_table.h  typedefs.cpp  typedefs.h
hw5/dude_tests/: README.txt  run.sh  test1.in  test11.in  test12.in  test13.in  test14.in  test15.in  test17.in  test17.myOut  test19.in  test24.myOut  test27.in  test28.in  test36.in  test40.in  test41.in  test43.in  test44.in  test47.in  test48.in  test52.myOut  test53.in  test55.myOut  test56.in  test56.myOut  test57.myOut  test58.in  test58.myOut  test6.in  test60.in  test61.in  test62.in  test62.myOut  test64.myOut  test67.in  test7.in  test71.in  test72.in
hw5/more_tests/: t1.in  t10.in  t11.in  t12.in  t13.in  t14.in  t15.in  t16.in  t17.in  t18.in  t19.in  t2.in  t20.in  t21.in  t22.in  t23.in  t24.in  t25.in  t26.in  t27.in  t28.in  t4.in  t5.in  t6.in  t7.in  t8.in  t9.in  te11.in  te12.in  te14.in  te16.in  te18.in  te2.in  te21.in  te24.in  te28.in  te29.in  te31.in  te32.in  te35.in  (+14 more)
hw5/my_tests/: t1.in  t1.ll  t1.myOut  t2.in  t2.ll  t2.myOut  t3.in  t3.ll  t4.in  t4.ll  t4.myOut
hw5/samy_tests/: t12.in  t13.in  t14.in  t15.in  t17.in  t18.in  t22.in  t23.in  t24.in  t29.in  t30.in  t31.in  t32.in  t33.in  t37.in  t38.in  t39.in  t40.in  t5.in  t6.in  t7.in  t8.in  t9.in
(+301 files in other folders)
